Fixed simultaneous bot or user message icon overlap issue

--- a/Interface/CSS/chat.css
+++ b/Interface/CSS/chat.css
@@ -67,7 +67,7 @@
   .msg {
     display: flex;
     align-items: flex-end;
-    margin-bottom: 10px;
+    margin-bottom: 35px;
   }
   .msg:last-of-type {
     margin: 0;
